QualiLogProject/style/styleW.css
:root {
    --lightGray: #fefefe;
    --WLcolor0: #b5e1d8;
    --WLcolor1: #69BBAA;
    --WLcolor2: #4A8A8B;
    --backgroundColor: #eef2f7;
    --red: #b00;
    --blue: #4679bd;
    --grey: #ddd;
}

html {
    overflow: hidden;
    height: 100%;
}

body {
    height: 100%;
    overflow: auto;
    font-family: SF_Pro_Display, Calibri, Helvetica, sans-serif;
    background-color: var(--backgroundColor);
}

* {
    outline : 0;
    margin : 0;
}

@font-face {
    font-family: 'SF_Pro_Display';
    src: url('../../font/SFPRODISPLAYREGULAR.woff');
}

input, select {
    width: 100%; 
    margin: 8px 0;
    padding: 10px 15px;
    display: inline-block;
    border: 2px solid var(--WLcolor2);
    box-sizing: border-box;
    font-size: 100%;
}

button {
    background: var(--WLcolor1);
    border: 2px solid var(--WLcolor2);
    color: white;
    border-radius: 8px;
    align-self: center;
    width: 60%;
    padding: 10px 18px;
    margin: 15px 5px;
    font-size: 1em;
    cursor: pointer;
}

button:hover {
    opacity: 0.7;
} 

select {
    height: 40px;
}

a {
    color: inherit;
    text-decoration: none;
    color: black;
    cursor: pointer;
}

a:hover {
    text-decoration: underline;
}

details {
    border: 1px solid #aaa;
    border-radius: 4px;
    margin : 0 15px;
    padding: .5em .5em 0;
    background-color: white;
}

summary {
    font-weight: bold;
    margin: -.5em -.5em 0;
    padding: .5em;
}

.container {
    display : flex;
    flex-direction: column;
    padding: 25px;
    background-color: var(--lightGray);
    margin: 5px 5px;
    border-radius: 8px;
    width: auto;
    min-width: 350px;
    box-shadow: 0 8px 12px 5px rgba(0, 0, 0, 0.2);
}

.lineContainer{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.Alerte{
    z-index: 2;
    position: absolute;
    top: 0;
    left: 0;
    height: 40px;
    width: 100%;
    text-align: center;
    line-height: 40px;
    animation-duration: 5s;
    animation-name: disp;
    opacity: 0%;
}

@keyframes disp {
    from { opacity: 100%; }
    80% { opacity: 100%; }
    to { opacity: 0%; }
}

.bandeau {
    position: sticky;
    top: 0px;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    background-color: var(--WLcolor1);
    margin: 0;
    padding: 10px;
    height: 50px;
    border-bottom: 3px solid var(--WLcolor0);
}

.bandeauElement {
    text-align: center;
    width: 250px;
}

@media screen and (max-width: 1420px) {
    .bandeauElement {
        width: 200px;
    }
}

@media screen and (max-width: 1024px) {
    .bandeauElement {
        width: 150px;
    }
}

.bandeau a {
    color: white;
    text-decoration: none;
    font-size: 20px;
}

.bandeau a:hover {
    color: var(--lightGray);
    font-size: 21px;
}

.listeMateriel {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-evenly;
}

.Materiel {
    margin: 20px 10px;
    background-color: white;
    width: 500px;
    height: 200px;
    display: flex;
    flex-direction: row;
    border-radius: 6px;
    box-shadow: 0 8px 12px 5px rgba(0, 0, 0, 0.2);
}

.Materiel img {
    width: 180px;
    height: 180px;
    margin: 10px;
    border-radius: 5px;
}

.DescriptionMateriel {
    width: 300px;
    margin: 10px;
    padding: 20px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    text-align: center;
}

.nomMateriel {
    display: flex;
    flex-direction: row;
    justify-content: center;
    font-size: 20px;
    font-weight: bold;
    margin: 0 0 0 12px;
}

.nomMateriel img {
    margin: 2px 10px;
}


.DescriptionMateriel hr {
    background-color:var(--WLcolor2);
    border-radius: 2px;
    border: none;
    height: 2px;
}

.versionEtRef {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
}

.versionEtRef p:nth-child(2) {
    font-weight: bold;
}

.form-control {
    display: block;
    line-height: 1.5;
    color: #495057;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid #ced4da;
    border-radius: .25rem;
    padding: 6px;
    border-radius: 4px;
    font-size: 12px;
    width: 140px;
    align-self: center;
}

.form-control:focus {
    animation-duration: 0.15s;
    animation-name: inputshadow;
    border: 1px solid var(--WLcolor1);
    box-shadow: 0 0px 0px 2px var(--WLcolor0);
}

@keyframes inputshadow {
    from {
        border: 1px solid #ced4da;
        box-shadow: 0 0px 0px 0px #ffffff;
    }
    to {
        border: 1px solid var(--WLcolor1);
        box-shadow: 0 0px 0px 2px var(--WLcolor0);
    }
}

.daterangepicker .in-range.available {
    background-color: var(--WLcolor0);
}

.daterangepicker .active.available {
    background-color: var(--WLcolor2);
}

.daterangepicker .active.available:hover {
    background-color: var(--WLcolor1);
}

.daterangepicker button {
    border-radius: 5px;
    width: auto;
}

.daterangepicker button:nth-child(2){
    color: black;
    background-color: lightgray;
    border: 1.5px solid gray;
}

.daterangepicker button:nth-child(2):hover {
    opacity: 1;
    background-color: rgb(190, 190, 190);
    border: 1.5px solid rgb(110, 110, 110);
}

.daterangepicker button:nth-child(3){
    border: 1.5px solid var(--WLcolor2)
}

.titrePage {
    font-size: 1.8em;
    font-weight: bold;
    text-align: center;
    margin: 0;
    padding: 0;
  }

.titleRule {
    margin-top: 20px;
    margin-bottom: 20px;
    margin-left: 10%;
    margin-right: 10%;
    background-color:var(--WLcolor2);
    border-radius: 2px;
    border: none;
    height: 3px;
  }

.Tableau {
    width: auto;
    border-collapse: collapse;
    border: 2px solid;
    margin: 10px auto;
}

th {
    border: 2px solid black;
    text-align: center;
    font-weight: bold;
    background-color: #a4d1c8;
    padding: 0 10px;
}

.Tableau td {
    border: 1px solid;
    text-align: center;
    padding: 0 30px;
}

.Tableau td:last-child {
    border: 1px solid;
    text-align: center;
    padding: 3px 3px 0px 5px;
}

.Tableau tr:hover {
    background-color: var(--grey);
}

.Tableau img {
    width: 20px;
}

.Tableau img:hover {
    filter: invert(100%)
}

.Titre {
    text-align: center;
    margin-bottom: 1%;
    margin-top: 2%;
}

#BoutonCreerCompte {
    text-align: center;
    margin-top:20px;
    margin-bottom: 20px;
}

.Tableau input {
    width: 18px;
    height: 18px;
    margin-top: 4px;
    margin-bottom: 0px;
}

.TitleList {
    list-style: none;
    margin-left : 8%;
    margin-top : 2%;
}

.TitleListItem {
    margin-bottom: 15px;
}

.TitleLink{
    text-decoration: none;
    font-size: 1.5em;
}

.TitleLink:hover{
    color: var(--WLcolor1);
    text-decoration: none;
}

.AddUserButton {
    margin-left: 43%;
    margin-right: 43%;
    border-style: solid;
    border-color : white;
    border-radius: 5px;
    background-color: white;
    margin-bottom: 20px;
}

.AddUserButton:hover {
    border-style: solid;
    border-color : var(--grey);
    border-radius: 5px;
    background-color: var(--grey);

}

.NoUnderline:hover {
    text-decoration: none;
}

